--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,12 +1,14 @@
 body {
     font-family: 'Open Sans', sans-serif;
 }
+
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: antiquewhite;
 }
+
 .header {
     background-color: antiquewhite;
     padding: 20px 30px 0px 150px;
@@ -14,74 +16,87 @@ nav {
     background-repeat: no-repeat;
     background-position: bottom right;
 }
+
 .banner-left h4 {
-    color:#474747;
+    color: #474747;
     font-size: 25px;
     font-weight: 400;
     line-height: normal;
     margin-bottom: 0px;
 }
+
 .banner-left {
     max-width: 600px;
 }
+
 .banner-left h2 {
-    color:#181818;
-font-size: 55px;
-font-weight: 700;
-margin-top: 0px;
-margin-bottom: 0px;
+    color: #181818;
+    font-size: 55px;
+    font-weight: 700;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
+
 .banner-left p {
     color: #757575;
-font-size: 18px;
-font-weight: 400;
-line-height: 30px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
 }
+
 .text-primary {
     color: #FD6E0A
 }
+
 .nav-title {
     color: #181818;
-font-size: 45px;
-line-height: normal;
+    font-size: 45px;
+    line-height: normal;
 }
+
 .btn-primary {
     border-radius: 5px;
-background: #FD6E0A;
-padding: 10px 20px;
-font-size: 20px;
-color:aliceblue
+    background: #FD6E0A;
+    padding: 10px 20px;
+    font-size: 20px;
+    color: aliceblue
 }
+
 .btn-secondary {
     border-radius: 5px;
     background-color: #FFF8F3;
-padding: 10px 20px;
-font-size: 20px;
-font-weight: 700;
-color: #FD6E0A
+    padding: 10px 20px;
+    font-size: 20px;
+    font-weight: 700;
+    color: #FD6E0A
 }
-nav > ul {
+
+nav>ul {
     display: flex;
     align-items: center;
-    
-    
+
+
 }
+
 nav li {
     list-style: none;
     margin-right: 50px;
     font-size: 20px;
     font-weight: 700;
 }
+
 nav a {
     text-decoration: none;
     color: #474747
 }
+
 .banner {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
+
 }
+
 .profile-pic {
     width: 500px;
 
@@ -89,21 +104,45 @@ nav a {
 
 /* About Section */
 
+main {
+    max-width: 1400px;
+    margin: 0px auto;
+}
 .about {
     margin: 130px 150px;
     padding: 170px 140px;
-    background-color: #FFF8F3;;
+    background-color: #FFF8F3;
+    ;
 }
+
 .section-title {
     color: #181818;
     text-align: center;
     font-size: 35px;
     font-weight: 700;
 }
+
 .section-description {
     color: #757575;
     text-align: center;
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info {
+    text-align: center
+}
+
+.para {
+    padding: 20px 150px;
+}
+
+.skill-container {
+    display: flex;
 }
